FIXED THE STUPID DARK MODE TOGGLE
i hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascripti hate javascript

--- a/css/style.css
+++ b/css/style.css
@@ -2,80 +2,73 @@
 
 body {
 	margin: 50px;
-	background-color: #fff; 
 	background-image: url("../img/wall.jpg");
 	font-family: Helvetica, Arial, sans-serif;
-	color: #000; 
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
 	font-family: Helvetica, Arial, sans-serif;
-	color: #000; 
-}
-
-/* CLASS TAGS */
-
-.nav-item a:link,
-.nav-item a:visited {
-	color: #000; 
-}
-
-.nav-item a:hover,
-.nav-item a:active {
-	color: #00f; 
-}
-
-/* ID TAGS */
-
-#head {
+  }
+  
+  /* CLASS TAGS */
+  
+  .nav-item a:link,
+  .nav-item a:visited {
+	color: #000;
+  }
+  
+  .nav-item a:hover,
+  .nav-item a:active {
+	color: #00f;
+  }
+  
+  /* ID TAGS */
+  
+  #head {
 	position: relative;
 	text-align: center;
 	padding-bottom: 25px;
-}
-
-#head h1 {
-	color: #077fff; 
-}
-
-#main {
+  }
+  
+  #head h1 {
+	color: #077fff;
+  }
+  
+  #main {
 	padding: 25px;
 	margin-top: 5px;
-	color: #000; /* Update text color to dark */
 	background-image: url("../img/body_wall.jpg");
-}
-
-#content {
-	color: #000; /* Update text color to dark */
+  }
+  
+  #content {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-#footer {
+  }
+  
+  #footer {
 	color: #777777;
 	text-align: center;
 	position: relative;
 	padding-top: 50px;
-	font-size: 12px; /* Correct the font-size property */
-}
-
-#about h3 {
+	font-size: 12px;
+  }
+  
+  #about h3 {
 	text-align: center;
-}
-
-#about abbr {
+  }
+  
+  #about abbr {
 	text-decoration: none;
-}
-
-/* Light Mode */
-.button {
-	background-color: #fff;
-	color: #000;
+  }
+  .button {
+	background-color: #000;
+	color: #fff;
 	border: none;
 	border-radius: 4px;
 	padding: 8px 16px;
@@ -85,23 +78,6 @@ h6 {
 }
 
 .button:hover {
-	background-color: #000;
-	color: #fff;
-}
-
-/* Dark Mode */
-.button-dark {
-	background-color: #000;
-	color: #fff;
-	border: none;
-	border-radius: 4px;
-	padding: 8px 16px;
-	font-size: 14px;
-	cursor: pointer;
-	outline: none; /* Remove outline when button is focused */
-}
-
-.button-dark:hover {
 	background-color: #fff;
 	color: #000;
 }
